compiler/testData/diagnostics/tests/traitWithRequired/traitRequiresAny.kt
interface AnyTrait : <!TRAIT_WITH_SUPERCLASS!>Any<!>

class Foo : AnyTrait

class Bar : AnyTrait, Any()
